- Add placeholders for new POCs: Voice & Gaze Tracking - Add QR example - Bug fix on link hover on mobile & iPad - Bug fix on link padding at certain resolutions - Cleaning up comments

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -137,8 +137,9 @@ a:focus {
 
 .poc-item {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin: 40px 0px;
+  width: 100%;
 }
 
 .poc-text-wrapper {
@@ -153,15 +154,15 @@ a:focus {
   align-items: center;
 }
 
-.poc-video-wrapper video {
-  /* border: black 1px solid; */
-}
 
 .tags-container {
   display: flex;
 }
 
 .poc-tag {
+  display: flex;
+  align-items: center;
+  text-align: center;
   margin-top: 5em;
   margin-right: 1em;
   background: #bef07f;
@@ -260,17 +261,20 @@ a:focus {
 
   .poc-item {
     flex-direction: column;
-    align-items: center;
   }
 
   .poc-text-wrapper {
-    /* order: 2; */
     margin-right: 0px;
     margin-bottom: 20px;
   }
 
+  .poc-tag:hover {
+    text-decoration: none;
+    box-shadow: none;
+    transform: none;
+  }
+
   .poc-video-wrapper {
-    /* order: 1; */
     position: relative;
     overflow: hidden;
     width: 100%;
@@ -289,7 +293,6 @@ a:focus {
     margin-top: 60px;
     color: white;
     font-weight: 600;
-    /* font-family: inherit; */
     font-size: 0.8em;
     letter-spacing: 0.4px;
   }
